# voxoid

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  contribution_suggestion.md
.github/workflows/: cmake_publish.yml  cmake_test.yml
cmake/: CompileOptions.cmake  Libraries.cmake
include/voxoid/: game.h  tile.h  tilecube.h
include/voxoid/state/: controlstate.h  gamestate.h  renderstate.h
include/voxoid/system/: controlupdate.h  cubeselection.h  render.h  selection.h
src/: CMakeLists.txt  game.c  tile.c  tilecube.c  voxoid.c
src/state/: CMakeLists.txt  controlstate.c
src/system/: CMakeLists.txt  controlupdate.c  render.c  selection.c
test/: CMakeLists.txt  testrunner.c
test/empty/: CMakeLists.txt  empty.c
